  resulting in meaningless results for not non-negative definite matrices (without 
  any numerical tolerance!). Therefore power calculations for only semi-positive 
  definite correlation matrices could be off under R 3.0.

- Fixed: List of user defined power functions doesn't need to have names.

- Further work on the experimental entangled graphs feature.


Changes in version 0.8-3 (14-06-2013)
=====================================

- If a correlation matrix is selected in the main window, the same 
  correlation matrix is loaded per default in the power analysis dialog.

- To comply with CRAN policies the function graphGUI has now an argument
  envir to specify in which environment the object graph is located and/or 
  it should be saved (default is the global environment).

 41 files changed, 422 insertions(+), 140 deletions(-)


Changes in version 0.8-2 (14-06-2013)
=====================================

- The output of graph2latex has greatly improved and you nearly get 
  in TikZ what you can see in the Java GUI. 

- Fixed a bug existing in gMCP 0.7-11 to 0.8-1 which caused errors for 
  multiple power settings in the GUI.
  
- The official source repository switched from subversion/r-forge to git/github:
  https://github.com/kornl/gMCP
  (R package devtools from Hadley Wickham et al. can be used to install
  development versions.)
  Instead of subversion revision numbers you will find annotated tags specifying 
  the versions in the git repository.
  
 (This version was not accepted on CRAN. See news for version 0.8-3.)


Changes in version 0.8-1 (06-04-2013, Rev. 1567)
================================================

- An rJava update to 0.9-4 removed necessary files for gMCP 0.8-0.
  This is now fixed and CommonJavaJars (>= 1.0.3) are required.

- Since package highlight is now orphaned we instead use knitr.

- Fix for loading the namespace when just the base namespace is loaded.

 28 files changed, 177 insertions(+), 197 deletions(-)
 
