@@ -5,8 +5,8 @@ Version: 0.8-4
 Author: Kornelius Rohmeyer, Florian Klinglmueller (parametric tests, adaptive designs), Bjoern Bornkamp (power simulations)
 Maintainer: Kornelius Rohmeyer <rohmeyer@small-projects.de>
 Description: This package provides functions and a graphical user interface for graphical described multiple test procedures.
-Depends: R (>= 2.8.0), rJava (>= 0.6-3), CommonJavaJars (>= 1.0.3), methods, JavaGD
-Imports: MASS, PolynomF, multcomp (>= 1.1), lattice, mvtnorm, Matrix
+Depends: R (>= 2.8.0), rJava (>= 0.6-3), JavaGD
+Imports: MASS, PolynomF, multcomp (>= 1.1), lattice, mvtnorm, Matrix, CommonJavaJars (>= 1.0.3), methods
 Suggests: RUnit, Deducer, knitr, graph (>= 1.20), mutoss, boot
 SystemRequirements: Java (>= 5.0) 
 License: GPL (>= 2)
