@@ -1,42 +1,47 @@
 test.analysis <- function() {
   graph <- HungEtWang2010()
   graphAnalysis(graph)
-  checkEquals(accessible(graph, "H_{1,NI}"), c(FALSE, TRUE, TRUE, TRUE))
-  checkOptimal(graph)
-  as.num(c(1, NA, NaN, Inf, "1"))
+  checkEquals(gMCP:::accessible(graph, "H_{1,NI}"), c(FALSE, TRUE, TRUE, TRUE))
+  gMCP:::checkOptimal(graph)
+  checkEquals(gMCP:::as.num(c(1, NA, NaN, Inf, "1")), c(1, NA, NaN, Inf, 1))
 }
 
-test.parseEpsPolynom <- function() {	
-	checkEquals(c(5, 3, 2), 
-			gMCP:::parseEpsPolynom("5+3*epsilon+2*epsilon^2"))
-	checkEquals(c(1), 
-			gMCP:::parseEpsPolynom("1"))
-	checkEquals(c(5, 3, 2), 
-			gMCP:::parseEpsPolynom("2*epsilon*epsilon+5+3*epsilon"))
+test.calcPower <- function() {
+  
+  # calcPower calls (and therefore tests in some way) extractPower and graphTest
+  
+  weights <- c(1/2, 1/2, 0, 0)  
+  G <- simpleSuccessiveII()@m
+  ## alternative (mvn distribution)
+  corMat <- rbind(c(1, 0.5, 0.5, 0.5/2),
+                  c(0.5,1,0.5/2,0.5),
+                  c(0.5,0.5/2,1,0.5),
+                  c(0.5/2,0.5,0.5,1))
+  theta <- c(3, 0, 0, 0)
+  calcPower(weights, alpha=0.025, G, theta, corMat, seed = 4711, nSim = 100000)
+  
+  G <-BonferroniHolm(7)
+  C<-t(matrix(c(0, 1, 0,   -1,    0,
+                0, 0, 1,   -1,    0,
+                1, 0, 0,   -1,    0,
+                0, 1, 0, -0.5, -0.5,
+                0, 0, 1, -0.5, -0.5,
+                0, 1, 0,    0,   -1,
+                0, 0, 1,    0,   -1), ncol=7));
+  cov<-C%*%t(C)
+  dcov<-diag(cov)
+  corr<-cov/sqrt(dcov%*%t(dcov))
+  result <- calcPower(G@weights, alpha=0.025, G@m, mean=rep(1,7), sigma=corr, seed = 1234, nSim = 100000)
+  checkEquals(unname(round(result$LocalPower, 2)), rep(0.05, 7)) # No theory behind this result - just the current calculation result (which should not change without reason).
+  
+  # The next command calls also resultL2Text.
+  
+  gMCP:::calcMultiPower(weights=G@weights, alpha=0.025, G@m, muL=list(rep(1,7), rep(0,7)), sigmaL=list(rep(1,7), rep(2,7)), nL=list(rep(10,7), rep(20,7)),
+                             # sigma = diag(length(muL[[1]])), cr = NULL,
+                             nSim = 10000, seed = 4711, type = "quasirandom",
+                             f=list(), digits=4, variables=NULL)
+  
 }
 
-test.matrix2graph <- function() {
-	m<-rbind(H1=c("0",         "0",         "0.5",         "0.5"),
-			H2=c("0",         "0",         "0.5",         "0.5"),
-			H3=c("\\epsilon", "0",         "0",           "1-\\epsilon"),
-			H4=c("0",         "\\epsilon", "1-\\epsilon", "0"))
-	colnames(m) <- rownames(m)
-	m2 <- graph2matrix(matrix2graph(m))
-	checkEquals(m, m2)
-}
+# pretty minor TODO but for completeness: test updateGraphToNewClassDefinition
 
-test.makeEpsilonString <- function() {
-	checkEquals(gMCP:::makeEpsilonString(1/2,c(1,-1,1/2)),
-		"1/2+\\epsilon-\\epsilon^2+1/2*\\epsilon^3")
-    checkEquals(gMCP:::makeEpsilonString(0,c(1,-1,1/2)),
-			"\\epsilon-\\epsilon^2+1/2*\\epsilon^3")
-	checkEquals(gMCP:::makeEpsilonString(1/2,c()),
-			"1/2")
-}
-
-test.replaceVariables <- function () {
-	graph <- HungEtWang2010()
-	g <- replaceVariables(graph, list("tau"=0.5,"omega"=0.5, "nu"=0.5))
-	checkEquals(unname(g@m), structure(c(0, 0, 0, 0, 0.5, 0, 0.5, 0, 0.5, 0.5, 0, 0, 0, 0.5, 
-					0.5, 0), .Dim = c(4L, 4L)))
-}
