@@ -2,7 +2,6 @@
 ## Unit tests will not be done if RUnit is not available
 if(require("RUnit", quietly=TRUE)) {	
 	## --- Setup ---
-  gMCP:::requireLibraries()
 	pkg <- "gMCP"   
 	if(Sys.getenv("RCMDCHECK") == "FALSE") {
 		## Path to unit tests for standalone running under Makefile (not R CMD check)
